bundles/typical/inc/gatt_client.nim

##  ----------------------------------------------------------------------------
##  Copyright Message
##  ----------------------------------------------------------------------------
##
##  INGCHIPS confidential and proprietary.
##  COPYRIGHT (c) 2018 by INGCHIPS
##
##  All rights are reserved. Reproduction in whole or in part is
##  prohibited without the written consent of the copyright owner.
##
##
##  ----------------------------------------------------------------------------

import
  bluetooth, bt_types, btstack_util, btstack_event, btstack_linked_list

type
  gatt_client_service_t* {.importc: "gatt_client_service_t",
                          header: "gatt_client.h", bycopy.} = object
    start_group_handle* {.importc: "start_group_handle".}: uint16
    end_group_handle* {.importc: "end_group_handle".}: uint16
    uuid16* {.importc: "uuid16".}: uint16
    uuid128* {.importc: "uuid128".}: array[16, uint8]

  gatt_client_characteristic_t* {.importc: "gatt_client_characteristic_t",
                                 header: "gatt_client.h", bycopy.} = object
    start_handle* {.importc: "start_handle".}: uint16
    value_handle* {.importc: "value_handle".}: uint16
    end_handle* {.importc: "end_handle".}: uint16
    properties* {.importc: "properties".}: uint16
    uuid16* {.importc: "uuid16".}: uint16
    uuid128* {.importc: "uuid128".}: array[16, uint8]

  gatt_client_characteristic_descriptor_t* {.
      importc: "gatt_client_characteristic_descriptor_t", header: "gatt_client.h",
      bycopy.} = object
    handle* {.importc: "handle".}: uint16
    uuid16* {.importc: "uuid16".}: uint16
    uuid128* {.importc: "uuid128".}: array[16, uint8]


## *
##  @brief Discovers all primary services. For each found service, an le_service_event_t with type set to GATT_EVENT_SERVICE_QUERY_RESULT will be generated and passed to the registered callback. The gatt_complete_event_t, with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of discovery.
##

proc gatt_client_discover_primary_services*(callback: user_packet_handler_t;
    con_handle: hci_con_handle_t): uint8 {.importc: "gatt_client_discover_primary_services",
                                        header: "gatt_client.h".}
## *
##  @brief Discovers a specific primary service given its UUID. This service may exist multiple times. For each found service, an le_service_event_t with type set to GATT_EVENT_SERVICE_QUERY_RESULT will be generated and passed to the registered callback. The gatt_complete_event_t, with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of discovery.
##

proc gatt_client_discover_primary_services_by_uuid16*(
    callback: user_packet_handler_t; con_handle: hci_con_handle_t; uuid16: uint16): uint8 {.
    importc: "gatt_client_discover_primary_services_by_uuid16",
    header: "gatt_client.h".}
proc gatt_client_discover_primary_services_by_uuid128*(
    callback: user_packet_handler_t; con_handle: hci_con_handle_t;
    uuid128: ptr uint8): uint8 {.importc: "gatt_client_discover_primary_services_by_uuid128",
                             header: "gatt_client.h".}
proc gatt_client_discover_characteristics_for_service*(
    callback: user_packet_handler_t; con_handle: hci_con_handle_t;
    service: ptr gatt_client_service_t): uint8 {.
    importc: "gatt_client_discover_characteristics_for_service",
    header: "gatt_client.h".}
## *
##  @brief Finds included services within the specified service. For each found included service, an le_service_event_t with type set to GATT_EVENT_INCLUDED_SERVICE_QUERY_RESULT will be generated and passed to the registered callback. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of discovery. Information about included service type (primary/secondary) can be retrieved either by sending an ATT find information request for the returned start group handle (returning the handle and the UUID for primary or secondary service) or by comparing the service to the list of all primary services.
##

proc gatt_client_find_included_services_for_service*(
    callback: user_packet_handler_t; con_handle: hci_con_handle_t;
    service: ptr gatt_client_service_t): uint8 {.
    importc: "gatt_client_find_included_services_for_service",
    header: "gatt_client.h".}
## *
##  @brief The following four functions are used to discover all characteristics within the specified service or handle range, and return those that match the given UUID. For each found characteristic, an le_characteristic_event_t with type set to GATT_EVENT_CHARACTERISTIC_QUERY_RESULT will be generated and passed to the registered callback. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of discovery.
##

proc gatt_client_discover_characteristics_for_handle_range_by_uuid16*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    start_handle: uint16; end_handle: uint16; uuid16: uint16): uint8 {.
    importc: "gatt_client_discover_characteristics_for_handle_range_by_uuid16",
    header: "gatt_client.h".}
proc gatt_client_discover_characteristics_for_handle_range_by_uuid128*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    start_handle: uint16; end_handle: uint16; uuid128: ptr uint8): uint8 {.importc: "gatt_client_discover_characteristics_for_handle_range_by_uuid128",
    header: "gatt_client.h".}
proc gatt_client_discover_characteristics_for_service_by_uuid16*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    service: ptr gatt_client_service_t; uuid16: uint16): uint8 {.
    importc: "gatt_client_discover_characteristics_for_service_by_uuid16",
    header: "gatt_client.h".}
proc gatt_client_discover_characteristics_for_service_by_uuid128*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    service: ptr gatt_client_service_t; uuid128: ptr uint8): uint8 {.
    importc: "gatt_client_discover_characteristics_for_service_by_uuid128",
    header: "gatt_client.h".}
## *
##  @brief Discovers attribute handle and UUID of a characteristic descriptor within the specified characteristic. For each found descriptor, an le_characteristic_descriptor_event_t with type set to GATT_EVENT_ALL_CHARACTERISTIC_DESCRIPTORS_QUERY_RESULT will be generated and passed to the registered callback. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of discovery.
##

proc gatt_client_discover_characteristic_descriptors*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic: ptr gatt_client_characteristic_t): uint8 {.
    importc: "gatt_client_discover_characteristic_descriptors",
    header: "gatt_client.h".}
## *
##  @brief Reads the characteristic value using the characteristic's value handle. If the characteristic value is found, an le_characteristic_value_event_t with type set to GATT_EVENT_CHARACTERISTIC_VALUE_QUERY_RESULT will be generated and passed to the registered callback. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of read.
##

proc gatt_client_read_value_of_characteristic*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic: ptr gatt_client_characteristic_t): uint8 {.
    importc: "gatt_client_read_value_of_characteristic", header: "gatt_client.h".}
proc gatt_client_read_value_of_characteristic_using_value_handle*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic_value_handle: uint16): uint8 {.
    importc: "gatt_client_read_value_of_characteristic_using_value_handle",
    header: "gatt_client.h".}
## *
##  @brief Reads the characteric value of all characteristics with the uuid. For each found, an le_characteristic_value_event_t with type set to GATT_EVENT_CHARACTERISTIC_VALUE_QUERY_RESULT will be generated and passed to the registered callback. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of read.
##

proc gatt_client_read_value_of_characteristics_by_uuid16*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    start_handle: uint16; end_handle: uint16; uuid16: uint16): uint8 {.
    importc: "gatt_client_read_value_of_characteristics_by_uuid16",
    header: "gatt_client.h".}
proc gatt_client_read_value_of_characteristics_by_uuid128*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    start_handle: uint16; end_handle: uint16; uuid128: ptr uint8): uint8 {.
    importc: "gatt_client_read_value_of_characteristics_by_uuid128",
    header: "gatt_client.h".}
## *
##  @brief Reads the long characteristic value using the characteristic's value handle. The value will be returned in several blobs. For each blob, an le_characteristic_value_event_t with type set to GATT_EVENT_CHARACTERISTIC_VALUE_QUERY_RESULT and updated value offset will be generated and passed to the registered callback. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, mark the end of read.
##

proc gatt_client_read_long_value_of_characteristic*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic: ptr gatt_client_characteristic_t): uint8 {.
    importc: "gatt_client_read_long_value_of_characteristic",
    header: "gatt_client.h".}
proc gatt_client_read_long_value_of_characteristic_using_value_handle*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic_value_handle: uint16): uint8 {.importc: "gatt_client_read_long_value_of_characteristic_using_value_handle",
    header: "gatt_client.h".}
proc gatt_client_read_long_value_of_characteristic_using_value_handle_with_offset*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic_value_handle: uint16; offset: uint16): uint8 {.importc: "gatt_client_read_long_value_of_characteristic_using_value_handle_with_offset",
    header: "gatt_client.h".}
##
##  @brief Read multiple characteristic values
##  @param number handles
##  @param list_of_handles list of handles
##

proc gatt_client_read_multiple_characteristic_values*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    num_value_handles: cint; value_handles: ptr uint16): uint8 {.
    importc: "gatt_client_read_multiple_characteristic_values",
    header: "gatt_client.h".}
## *
##  @brief Writes the characteristic value using the characteristic's value handle without an acknowledgment that the write was successfully performed.
##

proc gatt_client_write_value_of_characteristic_without_response*(
    con_handle: hci_con_handle_t; characteristic_value_handle: uint16;
    length: uint16; data: ptr uint8): uint8 {.importc: "gatt_client_write_value_of_characteristic_without_response",
                                        header: "gatt_client.h".}
## *
##  @brief Writes the authenticated characteristic value using the characteristic's value handle without an acknowledgment that the write was successfully performed.
##

proc gatt_client_signed_write_without_response*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    handle: uint16; message_len: uint16; message: ptr uint8): uint8 {.
    importc: "gatt_client_signed_write_without_response", header: "gatt_client.h".}
## *
##  @brief Writes the characteristic value using the characteristic's value handle. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of write. The write is successfully performed, if the event's status field is set to 0.
##
